<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="Weight Info"
            android:textAlignment="center"
            android:textColor="@color/titlecolor"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-87dp" />

        <ImageButton
            android:id="@+id/nf_calendar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="62dp"
            android:src="@drawable/schedule_calendar"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="62dp"
            app:layout_constraintBottom_toTopOf="@+id/numberfragment_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/numberfragment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nf_weight"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <EditText
            android:id="@+id/numberfragment_weight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:ems="8"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/numberfragment_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberfragment_text" />

        <Button
            android:id="@+id/numberfragment_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textAlignment="center"
            android:theme="@style/buttonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.624"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <Button
            android:id="@+id/numberfragment_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print_button"
            android:textAlignment="center"
            android:theme="@style/buttonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <Button
            android:id="@+id/numberfragment_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/clear_button"
            android:textAlignment="center"
            android:theme="@style/buttonStyle"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.458" />

        <ScrollView
            android:layout_width="350dp"
            android:layout_height="275dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberfragment_clear">
        <TextView
            android:id="@+id/numberfragment_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
             />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>